Se añadió por ultimo enlace a la imagen

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
     <br>
     <hr>
-    <img class="img-center" src="assets/logosena.gif" alt="">
+    <a href="https://oferta.senasofiaplus.edu.co/sofia-oferta/" target="_blank"> 
+    <img class="img-center" src="assets/logosena.gif" alt="Gif del logo Sena">
+    </a>
     <hr>
     <br>
     <h1 class="text-center name"> MIGUEL ANGEL MORA ORTIZ </h1>
