se corrigieron errores

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <h1 class="text-center">Este es el <span class="dia">Día 2</span> del Programa Vacacional</h1>
+    <h1 class="text-center">Esta es la <span class="dia">Sesión 2 del Día 2</span> del Programa Vacacional</h1>
 
     <br>
 
